unpackaged/main/default/objects/OpportunitySplit/fields/Attributable_Goal__c.field-meta.xml
<CustomField>
    <fullName>Attributable_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>zOLD Attributable Goal</label>
    <referenceTo>Goal__c</referenceTo>
    <relationshipLabel>Opportunity Splits</relationshipLabel>
    <relationshipName>Opportunity_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>