unpackaged/main/default/objects/OpportunitySplit/fields/Booking_Channel_ARR__c.field-meta.xml
<CustomField>
    <fullName>Booking_Channel_ARR__c</fullName>
    <formula>Opportunity__r.Booking_Channel_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Channel (ARR)</label>
    <type>Text</type>
</CustomField>