unpackaged/main/default/objects/OpportunitySplit/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <formula>Opportunity__r.Booking_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>