unpackaged/main/default/objects/OpportunitySplit/fields/Is_Active_Split_Type__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Split_Type__c</fullName>
    <formula>SplitType.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active Split Type?</label>
    <type>Checkbox</type>
</CustomField>