unpackaged/main/default/objects/OpportunitySplit/fields/Is_Goal_Match__c.field-meta.xml
<CustomField>
    <fullName>Is_Goal_Match__c</fullName>
    <formula>NOT(ISBLANK(Attributable_Goal__c)) &amp;&amp; Opportunity__r.Booking_Month__c = Attributable_Goal__r.Period_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zOLD Is Goal Match?</label>
    <type>Checkbox</type>
</CustomField>