unpackaged/main/default/objects/OpportunitySplit/fields/Is_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Opportunity_Owner__c</fullName>
    <formula>SplitOwnerId = Opportunity__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Opportunity Owner?</label>
    <type>Checkbox</type>
</CustomField>