unpackaged/main/default/objects/OpportunitySplit/fields/Manual_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Manual_Attribution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Attribution?</label>
    <type>Checkbox</type>
</CustomField>