unpackaged/main/default/objects/OpportunitySplit/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Splits</relationshipLabel>
    <relationshipName>Opportunity_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>