unpackaged/main/default/objects/OpportunitySplit/fields/Split_Deal_Count__c.field-meta.xml
<CustomField>
    <fullName>Split_Deal_Count__c</fullName>
    <formula>IF(
  Split_Type_Label__c = &quot;New Annualized Revenue&quot;,
  Opportunity__r.Deal_Count__c * SplitPercentage,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Deal Count</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>