unpackaged/main/default/objects/OpportunitySplit/fields/Split_Logos__c.field-meta.xml
<CustomField>
    <fullName>Split_Logos__c</fullName>
    <formula>IF(
  Split_Type_Label__c = &quot;New Annualized Revenue&quot;,
  Opportunity__r.Total_Logos__c * SplitPercentage,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Total Logos</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>