unpackaged/main/default/objects/OpportunitySplit/fields/Split_Owner_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Split_Owner_Is_Active__c</fullName>
    <formula>SplitOwner.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Owner Is Active?</label>
    <type>Checkbox</type>
</CustomField>