unpackaged/main/default/objects/OpportunitySplit/fields/Split_Reason__c.field-meta.xml
<CustomField>
    <fullName>Split_Reason__c</fullName>
    <label>Split Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revenue - Leave Coverage</fullName>
            </value>
            <value>
                <fullName>Revenue - New Hire Coverage</fullName>
            </value>
            <value>
                <fullName>Revenue - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>