unpackaged/main/default/objects/OpportunitySplit/fields/Split_Retained_ARR__c.field-meta.xml
<CustomField>
    <fullName>Split_Retained_ARR__c</fullName>
    <formula>IF(
  Split_Type_Label__c = &quot;New Annualized Revenue&quot;,
  Opportunity__r.Retained_ARR__c * SplitPercentage,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Retained ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>