unpackaged/main/default/objects/OpportunitySplit/fields/Split_Total_Annualized_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Split_Total_Annualized_Revenue__c</fullName>
    <formula>IF(
  Split_Type_Label__c = &quot;New Annualized Revenue&quot;,
  Opportunity__r.Total_Annualized_Revenue__c * SplitPercentage,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Total Annualized Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>