unpackaged/main/default/objects/OpportunitySplit/fields/Split_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>Split_Type_Label__c</fullName>
    <formula>SplitType.MasterLabel</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Type Label</label>
    <type>Text</type>
</CustomField>