unpackaged/main/default/objects/OpportunitySplit/fields/Split_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Split_Type_Name__c</fullName>
    <formula>SplitType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Type Name</label>
    <type>Text</type>
</CustomField>